--- a/src/components/shared/Navbar/Navbar.module.scss
+++ b/src/components/shared/Navbar/Navbar.module.scss
@@ -97,7 +97,7 @@
 
   &.active {
     font-weight: 600;
-    color: var(--accent-dark);
+    // color: var(--accent-dark);
     background: var(--accent-light);
   }
 }
